# projectInfo

./: .gitignore  CMakeLists.txt  README.md
projectInfo/: CMakeLists.txt
projectInfo/configure/projectInfo/: ProjectInfo.h.in
runner/: CMakeLists.txt
runner/source/: main.cpp
